# qontinui-stack

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: qontinui-ci.yml
.qontinui/: config.yml
aws/: .gitignore  README.md
aws/eu-central-1/: backend.tf  main.tf  providers.tf  terraform.tfvars.example  variables.tf
aws/lambdas/cognito_presignup_autolink/: handler.py  test_handler.py
aws/modules/blob/: main.tf
aws/modules/cognito/: main.tf  outputs.tf  variables.tf
aws/modules/coord/: HA-PHASE-C-STORE-DECISION.md  main.tf
aws/modules/cost-control/: main.tf
aws/modules/cross-idp-linking/: .gitignore  main.tf
aws/modules/migrator/: main.tf
aws/modules/network/: main.tf
aws/modules/observability/: main.tf
aws/modules/postgres/: main.tf
aws/modules/redis/: main.tf
aws/modules/session-output-cold/: main.tf
aws/modules/tunnel/: main.tf
aws/scripts/: bootstrap-tf-backend.sh  coord-ha-chaos-validate.sh  push-coord-image.sh  staging-start.sh  staging-stop.sh
aws/staging/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
docs/: sccache-cross-machine.md  session-output-cold-tier.md
hooks/: README.md  pre-checkout-coord-guard.sh
init-scripts/: 01-create-schemas.sql
migrator/: Dockerfile  Dockerfile.dockerignore  alembic_at_head.sh  entrypoint.sh  pyproject.toml
nats-config/: README.md  nats-1.conf  nats-2.conf  nats-3.conf
sccache/: Dockerfile  entrypoint.sh  stats_server.py
scripts/: coord-preserve-before-rebuild.sh  open-firewall-lan.ps1  plan-graph.py  resolve-plan-deps.py  seed-from-legacy.sh  symbol-claims-by-machine.py  verify-sccache-cross-machine.sh
scripts/tests/: test_plan_graph.py  test_resolve_plan_deps.py  test_symbol_claims_by_machine.py
web-prod/: Dockerfile
(+12 files in other folders)
