[tool.poetry]
name = "qontinui-canonical-migrator"
version = "0.1.0"
description = "One-shot alembic upgrade head runner for the canonical qontinui DB"
authors = ["Joshua Spinak <jspinak@gmail.com>"]
package-mode = false

# Curated subset of qontinui-web/backend deps — only what alembic env.py and
# the SQLAlchemy model graph need to load. Mirrors the version constraints in
# qontinui-web/backend/pyproject.toml so resolution lines up with the host
# environment if you ever need to compare schemas. See migrator/README in the
# Dockerfile commentary for why we don't `poetry install --only main` against
# qontinui-web/backend directly: doing so drags `qontinui` (the ML library)
# in via path dep, which pulls torch+CUDA from the pytorch-cu128 wheel index
# (~3 GB) — far over the 500 MB image-size target. None of that mass is
# needed to run `alembic upgrade head`.

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<3.15"

# Core migration runtime — alembic + sync DB driver.
alembic = "^1.16.5"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.0"

# Model-graph deps — what `from app.db.base_class import *` actually needs.
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
fastapi-users = {version = "^15", extras = ["sqlalchemy"]}
pgvector = "^0.4.2"
email-validator = "^2.2"

# qontinui-schemas is a pydantic-only path dep (see qontinui-schemas/__init__.py
# header — explicitly designed to avoid heavy ML libs). Models import
# `qontinui_schemas.common.utc_now` and `qontinui_schemas.generated.*`.
qontinui-schemas = {path = "../../qontinui-schemas", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
